[package]
name = "alpaca_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
bytes = "1.8.0"
chrono = { version = "0.4.38", features = ["serde"] }
derive_builder = "0.20.2"
http = "1.1.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
serde_with = "3.11.0"
trait-variant = "0.1.2"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
